kustomize/base/ingress-prometheus-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus-server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
